feat(backend/auth): add auth login endpoint
