# backend/src/api/users/interface/users.service.interface.ts
@@ -4,4 +4,5 @@ import { UserEntity } from '../domain/entity/user.entity';
 export interface UsersService {
   getUserById(id: number): Promise<UserEntity>;
   createUser(user: CreateUserDto): Promise<UserEntity>;
+  getUserByUsernameOrEmail(usernameOrEmail: string): Promise<UserEntity | null>;
 }
